Fix caption text wrap. Finish Edit post CSS

--- a/app/assets/stylesheets/user_posts.css
+++ b/app/assets/stylesheets/user_posts.css
@@ -86,3 +86,7 @@
   background-color: var(--lightBlue);
   color: white;
 }
+
+.photo-modal-caption-caption {
+  overflow-wrap: break-word;
+}
